[project]
name = "drc-doc-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "prtsh", email = "134041561+theprtsh@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pymysql>=1.1.2",
    "ruff>=0.14.10",
]

[project.scripts]
start = "drc_doc_search.main:main_local"
start-remote = "drc_doc_search.main:main_remote"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"
